Added repository and helper for stored procedures

--- a/StaffTrackApp.DAL/StaffTrackApp.DAL.csproj
+++ b/StaffTrackApp.DAL/StaffTrackApp.DAL.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StaffTrackApp.Common\StaffTrackApp.Common.csproj" />
+  </ItemGroup>
+
 </Project>
