--- a/StaffTrackApp.Common/StaffTrackApp.Common.csproj
+++ b/StaffTrackApp.Common/StaffTrackApp.Common.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Requests\" />
+    <Folder Include="Models\Responses\" />
+  </ItemGroup>
+
 </Project>
