--- a/StaffTrackApp.SAL/StaffTrackApp.SAL.csproj
+++ b/StaffTrackApp.SAL/StaffTrackApp.SAL.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StaffTrackApp.Common\StaffTrackApp.Common.csproj" />
+    <ProjectReference Include="..\StaffTrackApp.DAL\StaffTrackApp.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
