Added configurations and registered services

--- a/StaffTrackApp.PL/appsettings.json
+++ b/StaffTrackApp.PL/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CompanyConfig": {
+    "CompanyId": 1
+  },
+  "ExportSettings": {
+    "ExportFilePath": "C:\\ExportedFiles\\employees"
+  },
   "AllowedHosts": "*"
 }
