--- a/StaffTrackApp.PL/StaffTrackApp.PL.csproj
+++ b/StaffTrackApp.PL/StaffTrackApp.PL.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StaffTrackApp.Common\StaffTrackApp.Common.csproj" />
+    <ProjectReference Include="..\StaffTrackApp.DAL\StaffTrackApp.DAL.csproj" />
+    <ProjectReference Include="..\StaffTrackApp.SAL\StaffTrackApp.SAL.csproj" />
+  </ItemGroup>
+
 </Project>
