--- a/StaffTrackApp.PL/appsettings.json
+++ b/StaffTrackApp.PL/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MSSQLConnection": "Server=myServerAddress;Database=myDataBase;Integrated Security=True;"
+  },
   "CompanyConfig": {
     "CompanyId": 1
   },
