updated pages and configuration

--- a/StaffTrackApp.PL/appsettings.json
+++ b/StaffTrackApp.PL/appsettings.json
@@ -6,10 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=myServerAddress;Database=myDataBase;Integrated Security=True;"
-  },
-  "CompanyConfig": {
-    "CompanyId": 1
+    "MSSQLConnection": "Data Source=DESKTOP-SOJTG7Q;Database=StaffTrackDB;User ID=admin;Password=123;Pooling=true;Max Pool Size=5000;TrustServerCertificate=true;"
   },
   "ExportSettings": {
     "ExportFilePath": "C:\\ExportedFiles\\employees"
