--- a/StaffTrackApp.DAL/StaffTrackApp.DAL.csproj
+++ b/StaffTrackApp.DAL/StaffTrackApp.DAL.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\StaffTrackApp.Common\StaffTrackApp.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
